Fixed comment section showing on view previous sermon. Fixed white space on right part of about me. Fixed hamburger not changing active button.

--- a/static/churchApp/mobile.css
+++ b/static/churchApp/mobile.css
@@ -32,8 +32,8 @@ body{
 }
 
 .mivision{
-  background-color:rgba(248, 95, 115, 0.8);
-  font-size:1.250em;
+  background-color: rgba(248, 95, 115, 0.5) !important;
+  font-size:1.125em;
 }
 
 .fade-enter-active, .fade-leave-active {
